po: update po/hu_HU/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/pledge.po
+++ b/po/hu_HU/pledge.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 20:19+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 19:18+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -31,10 +31,6 @@ msgstr "Fizetési egyenleg"
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Next Payment Date"
 msgstr "Következő fizetés dátuma"
-
-#: CRM/Pledge/BAO/Pledge.php
-msgid "Next Payment Amount"
-msgstr "Következő fizetés összege"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Paid Amount"
@@ -663,10 +659,6 @@ msgid "Contributions made in honor of %1"
 msgstr "Az adományok %1 tiszteletére érkeztek"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
-msgid "Make Payment"
-msgstr "Kifizetés megtétele"
-
-#: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Payments"
 msgstr "Fizetendők"
 
@@ -786,6 +778,14 @@ msgstr "Köszönjük a nagylelkü támogatásod."
 msgid "Pledge Payment Reminder"
 msgstr "Felajánlással kapcsolatos kifizetési emlékeztető"
 
+#: CRM/Pledge/BAO/PledgeBlock.php
+msgid "First installment payment"
+msgstr "Első részletfizetés"
+
+#: CRM/Pledge/BAO/PledgeBlock.php
+msgid "Day of month installments paid"
+msgstr "Részletfizetés napja "
+
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement Sent"
 msgstr "Felajánlás köszönetnyilvánításelküldve"
@@ -813,6 +813,10 @@ msgstr "Felajánlás blokk azonosítója"
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Expose Frequency Interval?"
 msgstr "Mutassa a gyakorisági időközet"
+
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Allow Edits to Recurring Donation Start Date?"
+msgstr "Ismétlődő adomány kezdőnap szerkesztésének engedélyezése?"
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
