--- a/po/ja_JP/countries.po
+++ b/po/ja_JP/countries.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -1046,3 +1046,23 @@ msgstr "セントバーツ"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "セント マーチン島 (フランス領)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr ""
