--- a/po/ja_JP/provinces.po
+++ b/po/ja_JP/provinces.po
@@ -11,9 +11,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 06:55+0000\n"
-"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15730,9 +15730,33 @@ msgid "Phuket"
 msgstr ""
 
 msgctxt "province"
+msgid "Wake Island"
+msgstr ""
+
+msgctxt "province"
 msgid "Northern Ostrobothnia"
 msgstr ""
 
 msgctxt "province"
 msgid "Telangana"
+msgstr ""
+
+msgctxt "province"
+msgid "Guadeloupe"
+msgstr ""
+
+msgctxt "province"
+msgid "Martinique"
+msgstr ""
+
+msgctxt "province"
+msgid "Guyane"
+msgstr ""
+
+msgctxt "province"
+msgid "La Réunion"
+msgstr ""
+
+msgctxt "province"
+msgid "Mayotte"
 msgstr ""
