--- a/po/ko_KR/menu.po
+++ b/po/ko_KR/menu.po
@@ -5,14 +5,14 @@
 # Translators:
 # JahyunRyu <koyulka@gmail.com>, 2015
 # Josh Kim <joshkkim@gmail.com>, 2013-2014
-# Min-kwon Jo <minkwon007@gmail.com>, 2016
+# 조민권 <minkwon007@gmail.com>, 2016
 # Young Jun Kim <young.j.kim0214@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 14:23+0000\n"
-"Last-Translator: Min-kwon Jo <minkwon007@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2155,9 +2155,19 @@ msgctxt "menu"
 msgid "Payment Methods"
 msgstr "결제방법"
 
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Close Accounting Period"
+msgstr ""
+
 msgctxt "menu"
 msgid "Configure CKEditor"
 msgstr "CKEditor 구성"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviCRM Resources"
+msgstr ""
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2189,6 +2199,11 @@ msgstr "구성요소"
 msgctxt "menu"
 msgid "Extensions"
 msgstr "확장 기능"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "My Reports"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
