--- a/po/ko_KR/provinces.po
+++ b/po/ko_KR/provinces.po
@@ -7,9 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-04 05:40+0000\n"
-"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15726,9 +15726,33 @@ msgid "Phuket"
 msgstr "Phuket"
 
 msgctxt "province"
+msgid "Wake Island"
+msgstr ""
+
+msgctxt "province"
 msgid "Northern Ostrobothnia"
 msgstr "Northern Ostrobothnia"
 
 msgctxt "province"
 msgid "Telangana"
 msgstr "Telangana"
+
+msgctxt "province"
+msgid "Guadeloupe"
+msgstr ""
+
+msgctxt "province"
+msgid "Martinique"
+msgstr ""
+
+msgctxt "province"
+msgid "Guyane"
+msgstr ""
+
+msgctxt "province"
+msgid "La Réunion"
+msgstr ""
+
+msgctxt "province"
+msgid "Mayotte"
+msgstr ""
