--- a/po/ko_KR/countries.po
+++ b/po/ko_KR/countries.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-07-01 05:29+0000\n"
-"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -692,7 +692,7 @@ msgstr "팔라우"
 
 msgctxt "country"
 msgid "Palestinian Territory, Occupied"
-msgstr "팔레스타인 영토, 점령"
+msgstr "팔레스타인 영토"
 
 msgctxt "country"
 msgid "Panama"
@@ -1045,3 +1045,23 @@ msgstr "생바르텔레미"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "생마르탱(프랑스령)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr ""
