po: update po/nl_NL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -12,9 +12,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-02 19:06+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:43+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1018,10 +1018,6 @@ msgstr "Actie conditie"
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
 msgstr "Herhaal conditie"
-
-#: CRM/Admin/Form/ScheduleReminders.php
-msgid "From Email"
-msgstr "E-mailadres afzender"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
@@ -6438,6 +6434,14 @@ msgid ""
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
 msgstr "Relatieve maandwaarden worden berekend op basis van de lengte van de maand(en) die ze doorkruisen.\nHet resultaat is dezelfde dag van de maand behalve voor de dagen 29-31 als de doelmaand minder dagen heeft dan de voorgaande maand.\nBijvoorbeeld: Een taak die gepland staat op 31 augustus, zal de eerstvolgende keer op 1 oktober worden uitgevoerd en vervolgens elke 1e dag van de maand.\nPlan om dit te voorkomen taken a.u.b. op de eerste 28 dagen van de maand."
 
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Upload Document"
+msgstr ""
+
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Please upload document"
+msgstr ""
+
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
 msgstr "Menu-item"
@@ -6462,9 +6466,9 @@ msgstr "Scheidingsteken"
 msgid "Top level"
 msgstr "Hoogste niveau"
 
-#: CRM/Admin/Form/Preferences/Contribute.php
-msgid "Enable Access Control by Financial Type"
-msgstr "Toegangsbeheer op basis van financieel type inschakelen"
+#: CRM/Admin/Form/Options.php
+msgid "Value field Data Type mismatch"
+msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
@@ -6510,6 +6514,10 @@ msgstr "Ongedefinieerd laten"
 msgid "Use language in use at the time"
 msgstr "Taal die op dat moment in gebruik is gebruiken"
 
+#: CRM/Admin/Form/Setting/Miscellaneous.php
+msgid "Illegal stack size. Use values between 1 and %1."
+msgstr ""
+
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
 msgstr "Opslaan mislukt"
@@ -6522,6 +6530,10 @@ msgstr "Mogelijk moet u de cache van uw webbrowser leegmaken om de wijzigingen i
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
 msgstr "CKEditor opgeslagen"
+
+#: ang/crmCxn/ManageCtrl.js
+msgid "%1: Welcome (External)"
+msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
@@ -6573,6 +6585,16 @@ msgstr "Leeg laten om zo snel mogelijk uit te voeren."
 msgid "Leave blank to run at next run frequency."
 msgstr "Leeg laten om bij het volgende interval uit te voeren."
 
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid ""
+"Compose a message on-screen for general use in emails or document output, or"
+" upload a pre-composed document for mail-merge."
+msgstr ""
+
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid "Upload the document in .docx or .odt format."
+msgstr ""
+
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
 msgstr "Toegangsbeheer op basis van financieel type"
@@ -6583,6 +6605,13 @@ msgid ""
 "<p>For example, Planned Giving bequests may be highly confidential and not appropriate for staff organizing events to see, even though they need to be able to administer the payments for ticket purchases.</p>\n"
 "<p>After enabling, you will be able to set create, view, edit, and delete permissions separately for each financial type by navigating to Administer > Users and Permissions > Permissions (Access Control), and clicking on the Access Control link for your CMS."
 msgstr "Het inschakelen van toegangsbeheer op financiële types is alleen nodig wanneer gebruikers in een bepaalde rol  afhankelijk van het financiële type toegang moeten hebben tot sommige, maar niet alle financiële transacties.</p>\n<p>Bijvoorbeeld: Beloofde legaten kunnen zeer confidentieel zijn en medewerkers die evenementen organiseren horen die niet te zien, hoewel ze wel de betalingen van de kaartverkoop moeten kunnen verwerken.</p>\n<p>Na het inschakelen hiervan, kunt u de machtigingen voor elk financieel type apart kunnen instellen, bekijken, bewerken en verwijderen door onder Beheren > Gebruikers en machtigingen > Machtigingen (toegangsbeheer) op de Toegangsbeheer-link voor uw CMS te klikken."
+
+#: templates/CRM/Admin/Form/Preferences/Contribute.tpl
+msgid ""
+"Changing the Prior Financial Period may result in problems calculating "
+"closing account balances accurately and / or exporting of financial "
+"transactions. Do you want to proceed?"
+msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -6657,6 +6686,14 @@ msgstr "Standaardtaal (indien gewenst) voor contactrecords."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
+"In order to use this functionality, the installation's database user must "
+"have privileges to create triggers and views (in MySQL 5.0 – and in MySQL "
+"5.1 if binary logging is enabled – this means the SUPER privilege). This "
+"install either does not seem to have the required privilege enabled."
+msgstr ""
+
+#: templates/CRM/Admin/Form/Setting/Localization.tpl
+msgid ""
 "(Multilingual support currently cannot be enabled on installations with "
 "enabled logging.)"
 msgstr "(Ondersteuning voor meerdere talen kan momenteel niet ingeschakeld worden op installaties waarvan de logfunctie is ingeschakeld.)"
@@ -6669,6 +6706,12 @@ msgid ""
 "modifying default values. (These settings are NOT used for the built-in "
 "'Email - send now' feature)."
 msgstr "Deze instellingen worden gebruikt om de mailer-eigenschappen van de optionele component CiviMail te configureren waardoor u de prestaties aanzienlijk kunt verbeteren. Lees a.u.b. de %1 documentatie en verzeker u ervan dat u deze begrijpt alvorens de standaardwaarden te wijzigen. (Deze instellingen worden NIET gebruikt voor de ingebouwde 'Nu e-mail verzenden'-functie)."
+
+#: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
+msgid ""
+"If enabled, CiviCRM will allow users to submit profiles from external sites."
+" This is disabled by default to limit abuse."
+msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
