--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -16,9 +16,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-02 17:36+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3695,6 +3695,20 @@ msgid ""
 "accordingly."
 msgstr "Helaas, er zijn nog maar %2 plaatsen beschikbaar en u probeert %1 deelnemers aan te melden. Pas a.u.b. uw verzoek aan."
 
+#: CRM/Event/Form/Registration/Register.php
+msgid ""
+"It looks like you are already registered for this event. If you want to "
+"change your registration, or you feel that you've received this message in "
+"error, please contact the site administrator."
+msgstr ""
+
+#: CRM/Event/Form/Registration/Register.php
+msgid ""
+"It looks like this participant is already registered for this event. If you "
+"want to change your registration, or you feel that you've received this "
+"message in error, please contact the site administrator."
+msgstr ""
+
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only a single space is available for this option."
 msgstr "Helaas, er is op dit moment nog maar één plaats beschikbaar."
@@ -3783,6 +3797,20 @@ msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple participants."
 msgstr "De veldtypes bestand en automatisch-aanvullen-selecteren in het geselecteerde profiel worden niet ondersteund bij het wijzigen van meerdere deelnemers. "
+
+#: CRM/Event/Form/Task/Batch.php
+msgid ""
+"Participants whose status is changed FROM Pending Pay Later TO Registered or"
+" Attended will receive a confirmation email and their payment status will be"
+" set to completed. If this is not you want to do, you can change their "
+"participant status by editing their event registration record directly."
+msgstr ""
+
+#: CRM/Event/Form/Task/Batch.php
+msgid ""
+"Participants whose status is changed TO any of the following will be "
+"automatically notified via email: %1"
+msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
@@ -3887,6 +3915,13 @@ msgstr "Deze deelnemer weergeven"
 #: templates/CRM/Event/Form/SelfSvcTransfer.tpl
 msgid "Current<br />Participant"
 msgstr "Huidige<br />deelnemer"
+
+#: templates/CRM/Event/Form/Task/Batch.tpl
+msgid ""
+"Update field values for each participant as needed. To set a field to the same value for ALL rows, enter that value for the first participation and then click the\n"
+"        <strong>Copy icon</strong>\n"
+"        (next to the column title)."
+msgstr ""
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
