--- a/po/nl_NL/provinces.po
+++ b/po/nl_NL/provinces.po
@@ -14,9 +14,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:35+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15733,9 +15733,33 @@ msgid "Phuket"
 msgstr "Phuket"
 
 msgctxt "province"
+msgid "Wake Island"
+msgstr ""
+
+msgctxt "province"
 msgid "Northern Ostrobothnia"
 msgstr "Noord Ostrobothnia"
 
 msgctxt "province"
 msgid "Telangana"
 msgstr "Telangana"
+
+msgctxt "province"
+msgid "Guadeloupe"
+msgstr ""
+
+msgctxt "province"
+msgid "Martinique"
+msgstr ""
+
+msgctxt "province"
+msgid "Guyane"
+msgstr ""
+
+msgctxt "province"
+msgid "La Réunion"
+msgstr ""
+
+msgctxt "province"
+msgid "Mayotte"
+msgstr ""
