--- a/po/ro_RO/event.po
+++ b/po/ro_RO/event.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-24 17:48+0000\n"
-"Last-Translator: Dragos Apostol <dragos18dragon@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3691,6 +3691,20 @@ msgid ""
 "accordingly."
 msgstr ""
 
+#: CRM/Event/Form/Registration/Register.php
+msgid ""
+"It looks like you are already registered for this event. If you want to "
+"change your registration, or you feel that you've received this message in "
+"error, please contact the site administrator."
+msgstr ""
+
+#: CRM/Event/Form/Registration/Register.php
+msgid ""
+"It looks like this participant is already registered for this event. If you "
+"want to change your registration, or you feel that you've received this "
+"message in error, please contact the site administrator."
+msgstr ""
+
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only a single space is available for this option."
 msgstr ""
@@ -3778,6 +3792,20 @@ msgstr ""
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple participants."
+msgstr ""
+
+#: CRM/Event/Form/Task/Batch.php
+msgid ""
+"Participants whose status is changed FROM Pending Pay Later TO Registered or"
+" Attended will receive a confirmation email and their payment status will be"
+" set to completed. If this is not you want to do, you can change their "
+"participant status by editing their event registration record directly."
+msgstr ""
+
+#: CRM/Event/Form/Task/Batch.php
+msgid ""
+"Participants whose status is changed TO any of the following will be "
+"automatically notified via email: %1"
 msgstr ""
 
 #: CRM/Event/Task.php
@@ -3882,6 +3910,13 @@ msgstr ""
 
 #: templates/CRM/Event/Form/SelfSvcTransfer.tpl
 msgid "Current<br />Participant"
+msgstr ""
+
+#: templates/CRM/Event/Form/Task/Batch.tpl
+msgid ""
+"Update field values for each participant as needed. To set a field to the same value for ALL rows, enter that value for the first participation and then click the\n"
+"        <strong>Copy icon</strong>\n"
+"        (next to the column title)."
 msgstr ""
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
