--- a/po/sk_SK/countries.po
+++ b/po/sk_SK/countries.po
@@ -9,9 +9,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-09-09 20:50+0000\n"
-"Last-Translator: Jozef Gaal <preklady@mayday.sk>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1046,3 +1046,23 @@ msgstr "Saint Barthélemy"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "Saint Martin (Francúzska časť)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr ""
