--- a/po/ta/countries.po
+++ b/po/ta/countries.po
@@ -9,9 +9,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-08-05 14:04+0000\n"
-"Last-Translator: Ilagnayeru (MIG) Manickam <mig.tamil@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1046,3 +1046,23 @@ msgstr "செயிண்ட் பார்த்தலெமி"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "செயிண்ட் மார்டின் (பிரெஞ்சு பகுதி)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr ""
