--- a/po/tr_TR/contribute.po
+++ b/po/tr_TR/contribute.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 09:17+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 02:40+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -4977,20 +4977,26 @@ msgid "Recurring contribution"
 msgstr "Yinelenen katkı"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
-msgid " All recurring contributions"
+msgid "All recurring contributions"
 msgstr "Tüm yinelenen katkılar"
 
-#: CRM/Contribute/BAO/ContributionRecur.php
-msgid " Recurring contributions with at least one payment"
-msgstr "En az bir ödemesi olan yinelenen katkılar"
-
-#: CRM/Contribute/BAO/Query.php
+#: CRM/Contribute/BAO/ContributionRecur.php CRM/Contribute/BAO/Query.php
 msgid "Recurring contributions with at least one payment"
 msgstr "En az bir ödemesi olan yinelenen katkılar"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "All recurring contributions regardless of payments"
 msgstr "Ödemeden bağımsız olarak tüm yinlenen katkılar"
+
+#: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/Contribution.php
+#: templates/CRM/Contribute/Form/ContributionView.tpl
+msgid "Revenue Recognition Date"
+msgstr ""
+
+#: CRM/Contribute/DAO/ContributionPage.php
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Adjust Recurring Start Date"
+msgstr "Yinelenme Başlangıç Tarihini Ayarla"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Contribution Product ID"
@@ -5068,6 +5074,22 @@ msgstr "Hakkında Bağlantısı Rengi"
 msgid "Homepage Link Colour"
 msgstr "Ana Sayfa Bağlantısının Rengi"
 
+#: CRM/Contribute/Form/AdditionalInfo.php
+msgid "-select product-"
+msgstr "- ürünü seçin -"
+
+#: CRM/Contribute/Form/CloseAccPeriod.php
+msgid "Accounting Period to Close"
+msgstr "Kapatılacak Muhasebe Dönemi"
+
+#: CRM/Contribute/Form/CloseAccPeriod.php
+msgid "Are you sure you want to close accounting period?"
+msgstr "Muhasebe dönemini kapatmak istediğinize emin misiniz?"
+
+#: CRM/Contribute/Form/CloseAccPeriod.php
+msgid "Accounting Period has been closed successfully!"
+msgstr "Muhasebe dönemi kapatıldı!"
+
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Payment Processor Error message :"
 msgstr "Ödeme Aracısı Hata İletisi:"
@@ -5077,18 +5099,35 @@ msgid "Online Contribution:"
 msgstr "Çevrimiçi Katkı:"
 
 #: CRM/Contribute/Form/Contribution/Main.php
+msgid "Returning since contribution has already been handled."
+msgstr "Katkı zaten işlenmiş olduğundan geri ödeniyor."
+
+#: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
 "This page does not have any price fields configured or you may not have "
 "permission for them. Please contact the site administrator for more details."
 msgstr "Bu katkı sayfası için herhangi bir fiyat alanı ayarlanmamış ya da fiyat alanları ile ilgili izinleriniz yok. Ayrıntılı bilgi almak için site yöneticisi ile görüşün."
 
 #: CRM/Contribute/Form/Contribution/Main.php
+msgid "Confirm Payment"
+msgstr "Ödemeyi Onayla"
+
+#: CRM/Contribute/Form/Contribution/Main.php
 msgid "You cannot have auto-renewal on if you are paying later."
 msgstr "Daha sonra ödeme yapmayı seçtiyseniz otomatik yenileme yapıamazsınız."
+
+#: CRM/Contribute/Form/Contribution.php CRM/Contribute/Selector/Search.php
+#: templates/CRM/Contribute/Form/Contribution.tpl
+msgid "Pay with Credit Card"
+msgstr "Kredi Kartı ile Öde"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Transaction ID for the refund payment"
 msgstr "Geri ödemenin hareket kodu"
+
+#: CRM/Contribute/Form/Contribution.php
+msgid "Month and Year are required field for Revenue Recognition."
+msgstr ""
 
 #: CRM/Contribute/Form/Contribution.php
 msgid ""
@@ -5106,6 +5145,30 @@ msgstr "Lütfen bir üyelik seçin."
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Please renew my membership automatically."
 msgstr "Üyeliğim otomatik yenilensin."
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Specific Calendar Date"
+msgstr "Belirli Takvim tarihi"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Specific day of Month"
+msgstr "Ayın Belirli Günü"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Day of Contribution"
+msgstr "Katkı Günü"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Recurring Contribution Start Date Default"
+msgstr "Varsayılan Yinelenen Katkı Başlangıç Tarihi"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Allow Edits to Recurring Donation Start date?"
+msgstr "Yinelenen Bağış Başlangıç Tarihi Düzenlenebilsin"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "The recurring start date cannot be prior to the current date."
+msgstr "Yinelenme başlangıç tarihi bugünün tarihinden önce olamaz."
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Contribute/Task.php
@@ -5197,11 +5260,11 @@ msgstr "Faturalar - yazdırma ya da e-posta"
 msgid "No payments found for this %1 record"
 msgstr "Bu %1 kaydı için bir ödeme bulunamadı"
 
-#: templates/CRM/Contribute/Form/Contribution.tpl
+#: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
-"Use this form to submit a new contribution on behalf of %1. <strong>A\n"
-"        %2 transaction will be submitted</strong> using the selected payment processor."
-msgstr "%1 adına katkıda bulunmak için bu formu kullanın. Seçilmiş ödeme\naracısı kullanılarak <strong>bir %2 hareketi gönderilecek</strong>."
+"Recurring payment will be processed this day of the month following "
+"submission of this contribution page."
+msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid "Contributor Profiles"
@@ -5244,6 +5307,10 @@ msgid ""
 "Note: if the correct payment method is not listed here (e.g. for in-kind "
 "donations) ask your administrator to add a new option to this list."
 msgstr "Not: Doğru ödeme aracı görüntülenmiyorsa (takas bağışı gibi) bu listeye yeni bir seçenek eklenmesi için yöneticiniz ile görüşün."
+
+#: templates/CRM/Contribute/Page/UserDashboard.tpl
+msgid "Pay Now"
+msgstr "Öde"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "INVOICE"
