po: update po/tr_TR/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/common-components.po
+++ b/po/tr_TR/common-components.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 09:12+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 02:01+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -533,11 +533,6 @@ msgid ""
 "if you are searching within a date or amount range, try a wider range of "
 "values"
 msgstr "bir tarih ya da tutar aralığında arama yapıyorsanız daha geniş bir aralık seçin"
-
-#: templates/CRM/Campaign/Form/Task/Interview.tpl
-#: CRM/Contribute/Form/AdditionalPayment.php
-msgid "%1"
-msgstr "%1"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: templates/CRM/Report/Form/Tabs/OrderBy.tpl
@@ -2203,11 +2198,28 @@ msgstr "Ödeme Sözü Tutarı"
 msgid "Balance Due"
 msgstr "Bakiye Tarihi"
 
+#: CRM/Admin/Form/ScheduleReminders.php CRM/Contribute/Form/Task/PDF.php
+msgid "From Email"
+msgstr "Kimden E-posta Adresi"
+
+#: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
+msgid "Ascending"
+msgstr "Artan"
+
+#: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
+msgid "Descending"
+msgstr "Azalan"
+
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Number of Installments"
 msgstr "Taksit Sayısı"
+
+#: CRM/Contribute/Form/Contribution/Confirm.php
+#: templates/CRM/Pledge/Page/UserDashboard.tpl
+msgid "Make Payment"
+msgstr "Ödeme Yapın"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
@@ -2217,6 +2229,11 @@ msgstr "Ödeme yöntemi alanının doldurulması zorunludur."
 #: CRM/Contribute/Form/Contribution.php CRM/Member/Form/Membership.php
 msgid "You do not have all the permissions needed for this page."
 msgstr "Bu sayfa için gerekli erişme izinlerinizin tamamı yok."
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Show Recurring Donation Start Date?"
+msgstr "Yinelenen Bağış Başlangıç Tarihi Görüntülensin"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
@@ -2253,6 +2270,7 @@ msgid "Fees"
 msgstr "Ücretler"
 
 #: CRM/Event/Form/SelfSvcUpdate.php CRM/Report/Form/Case/Demographics.php
+#: CRM/Report/Form/Event/ParticipantListing.php
 msgid "-select-"
 msgstr "-seçin-"
 
@@ -2271,3 +2289,8 @@ msgstr "Eşsiz Açılma"
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Total Opens"
 msgstr "Toplam Açılma"
+
+#: CRM/Pledge/BAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
+#: CRM/Report/Form/Pledge/Pbnp.php
+msgid "Next Payment Amount"
+msgstr "Sonraki Ödeme Tutarı"
