--- a/po/tr_TR/provinces.po
+++ b/po/tr_TR/provinces.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 05:44+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 01:40+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -15729,9 +15729,33 @@ msgid "Phuket"
 msgstr "Phuket"
 
 msgctxt "province"
+msgid "Wake Island"
+msgstr "Wake Island"
+
+msgctxt "province"
 msgid "Northern Ostrobothnia"
 msgstr "Northern Ostrobothnia"
 
 msgctxt "province"
 msgid "Telangana"
 msgstr "Telangana"
+
+msgctxt "province"
+msgid "Guadeloupe"
+msgstr "Guadeloupe"
+
+msgctxt "province"
+msgid "Martinique"
+msgstr "Martinique"
+
+msgctxt "province"
+msgid "Guyane"
+msgstr "Guyane"
+
+msgctxt "province"
+msgid "La Réunion"
+msgstr "La Réunion"
+
+msgctxt "province"
+msgid "Mayotte"
+msgstr "Mayotte"
