po: update po/tr_TR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/install.po
+++ b/po/tr_TR/install.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 09:39+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 01:32+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -584,3 +584,37 @@ msgstr "Drupal Veritabanı Ayrıntıları"
 #: install/template.html
 msgid "Requirements"
 msgstr "Gereksinimler"
+
+#: install/index.php
+msgid "[your Backdrop root directory]"
+msgstr "[Backdrop kök klasörünüz]"
+
+#: install/index.php
+msgid "This installer can only be used for the Backdrop version of CiviCRM."
+msgstr "Bu yükleyici yalnız CiviCRM Backdrop sürümü için kullanılabilir."
+
+#: install/index.php
+msgid "Oops! Incorrect Backdrop version"
+msgstr "Backdrop sürümü doğru değil"
+
+#: install/index.php
+msgid ""
+"This version of CiviCRM can only be used with Backdrop 1.x. Please ensure "
+"that '%1' exists if you are running Backdrop 1.0 and over."
+msgstr "Bu CiviCRM sürünü yalnız Backdrop 1.x sürümleri ile çalışabilir. Lütfen Backdrop 1.0 ya da üzeri bir sürüm kullanıyorsanız '%1' bulunduğundan emin olun."
+
+#: install/index.php
+msgid ""
+"Backdrop user permissions have been automatically set - giving anonymous and"
+" authenticated users access to public CiviCRM forms and features. We "
+"recommend that you <a %1>review these permissions</a> to ensure that they "
+"are appropriate for your requirements (<a %2>learn more...</a>)"
+msgstr "Backdrop kullanıcı ayarları, anonim ve oturum açmış kullanıcıların herkese açık CiviCRM form ve özelliklerine erişebilmesini sağlayacak şekilde yapılır. İsteklerinize uygun olduğundan emin olmak için <a %1>bu ayarları gözden geçirmeniz</a> önerilir (<a %2>ayrıntılı bilgi alın...</a>)."
+
+#: install/template.html
+msgid "Backdrop Database Settings"
+msgstr "Backdrop Veritabanı Ayarları"
+
+#: install/template.html
+msgid "Backdrop Database Details"
+msgstr "Backdrop Veritabanı Ayrıntıları"
