po: update po/tr_TR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/member.po
+++ b/po/tr_TR/member.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 09:16+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 02:27+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -2291,12 +2291,40 @@ msgid ""
 msgstr "Bu üyelik otomatik yenilenecek. Otomatik yenileme seçeneğini iptal etmek için şuraya bakın: %1."
 
 #: CRM/Member/BAO/Query.php
+msgid "Membership is Auto-Renew and In Progress"
+msgstr "Üyelik Otomatik Yenileniyor ve İşlem Sürüyor"
+
+#: CRM/Member/BAO/Query.php
+msgid "Membership is Auto-Renew and Failed"
+msgstr "Üyelik Otomatik Yenileniyor ve İşlem Yapılamadı"
+
+#: CRM/Member/BAO/Query.php
+msgid "Membership is Auto-Renew and Cancelled"
+msgstr "Üyelik Otomatik Yenileniyor ve İptal Edildi"
+
+#: CRM/Member/BAO/Query.php
+msgid "Membership is Auto-Renew and Ended"
+msgstr "Üyelik Otomatik Yenileniyor ve Sona Ermiş"
+
+#: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
 msgstr "Üyelik Durumu Değiştirilebilir"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is NOT Overriden"
 msgstr "Üyelik Durumu DeğiştirileMEZ"
+
+#: CRM/Member/BAO/Query.php
+msgid "Auto-Renew Subscription Status?"
+msgstr "Abonelik Durumunu Otomatik Yenile"
+
+#: CRM/Member/BAO/Query.php
+msgid "- None -"
+msgstr "- Yok -"
+
+#: CRM/Member/BAO/Query.php
+msgid "Ended"
+msgstr "Sona Ermiş"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden?"
@@ -2386,8 +2414,14 @@ msgid "Export members"
 msgstr "Üyeleri Verin"
 
 #: CRM/Member/Task.php
-msgid "PDF letters - print for memberships"
-msgstr "PDF Mektuplar - Üyelikler için yazdırın"
+msgid "Print/merge document for memberships"
+msgstr "Üyelik belgesini yazdır/birleştir"
+
+#: templates/CRM/Member/Form/Membership.tpl
+msgid ""
+"Automatically email a membership confirmation and receipt to %1? OR if the "
+"payment is from a different contact, this email will only go to them."
+msgstr ""
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -2414,3 +2448,41 @@ msgstr "Hayır olarak seçildiğinde, yalnız durumu değiştirilmemiş üyelikl
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select neither to show all memberships"
 msgstr "Tüm üyelikleri görüntülemek için hiç biri olarak seçin"
+
+#: templates/CRM/Member/Form/Search.hlp
+msgid "Auto-Renew Subscription Status"
+msgstr ""
+
+#: templates/CRM/Member/Form/Search.hlp
+msgid ""
+"Select \"None\" to display memberships that have never had an auto-renew "
+"subscription."
+msgstr ""
+
+#: templates/CRM/Member/Form/Search.hlp
+msgid ""
+"Select \"In Progress\" to display memberships with current auto-renew "
+"subscriptions."
+msgstr ""
+
+#: templates/CRM/Member/Form/Search.hlp
+msgid "Select \"Failed\" to display memberships with failed subscription payment."
+msgstr ""
+
+#: templates/CRM/Member/Form/Search.hlp
+msgid ""
+"Select \"Cancelled\" to display memberships with cancelled auto-renew "
+"subscriptions."
+msgstr ""
+
+#: templates/CRM/Member/Form/Search.hlp
+msgid ""
+"Select \"Ended\" to display memberships with an ended auto-renew "
+"subscription."
+msgstr ""
+
+#: templates/CRM/Member/Form/Search.hlp
+msgid ""
+"Select \"Any\" to display memberships with auto-renew subscription "
+"irrespective of their status."
+msgstr ""
