po: update po/tr_TR/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/mailing.po
+++ b/po/tr_TR/mailing.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 09:16+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 01:55+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -2512,6 +2512,10 @@ msgstr "Yeniden abone olmak istediğinize emin misiniz: %1 (%2)"
 msgid "Opens/ Clicks"
 msgstr "Açılma / Tıklanma"
 
+#: CRM/Mailing/BAO/Mailing.php
+msgid "Document Body"
+msgstr "Belge İçeriği"
+
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
 msgstr "Kampanya %1 %2"
@@ -2586,6 +2590,14 @@ msgstr "İzlenebilir İnternet Adresi Açılma Kodu"
 msgid "Trackable Url"
 msgstr "İzlenebilir İnternet Adresi"
 
+#: CRM/Mailing/Form/Component.php
+msgid "Please provide either HTML or TEXT format for the Body."
+msgstr "Lütfen belge içeriğinin biçimi HTML ya da TEXT olarak seçin."
+
+#: CRM/Mailing/Selector/Browse.php
+msgid "Public View"
+msgstr "Herkese Açık Görünüm"
+
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
 msgstr "İzlenebilir Açılma Toplamı"
@@ -2615,3 +2627,7 @@ msgid ""
 " mailtos) will be automatically re-written to route through your CiviCRM "
 "website prior to redirecting to the target page."
 msgstr "Not: Bu özellik etkinleştirildiğinde, ileti metnindeki tüm bağlantılar otomatik olarak değiştirilir (mailto bağlantıları da) ve doğrudan hedef sayfaya yönlendirilmek yerine CiviCRM web sitenize yönlendirildikten sonra hedef sayfanın açılması sağlanır."
+
+#: templates/CRM/Mailing/Page/Report.tpl
+msgid "Public url"
+msgstr "Herkese Açık Adres"
