po: update po/tr_TR/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/pledge.po
+++ b/po/tr_TR/pledge.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 01:36+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 01:45+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -30,10 +30,6 @@ msgstr "Bakiye Tutarı"
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Next Payment Date"
 msgstr "Sonraki Ödeme Tarihi"
-
-#: CRM/Pledge/BAO/Pledge.php
-msgid "Next Payment Amount"
-msgstr "Sonraki Ödeme Tutarı"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Paid Amount"
@@ -662,10 +658,6 @@ msgid "Contributions made in honor of %1"
 msgstr "%1 şerefine yapılan katkılar"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
-msgid "Make Payment"
-msgstr "Ödeme Yapın"
-
-#: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Payments"
 msgstr "Ödemeler"
 
@@ -785,6 +777,14 @@ msgstr "Cömert desteğiniz için teşekkürler."
 msgid "Pledge Payment Reminder"
 msgstr "Ödeme Sözü Ödeme Anımsatıcı"
 
+#: CRM/Pledge/BAO/PledgeBlock.php
+msgid "First installment payment"
+msgstr "İlk taksit ödemesi"
+
+#: CRM/Pledge/BAO/PledgeBlock.php
+msgid "Day of month installments paid"
+msgstr "Ayın taksitlerin ödeneceği günü"
+
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement Sent"
 msgstr "Ödeme Sözü Anlaşması Gönderildi"
@@ -812,6 +812,10 @@ msgstr "Ödeme Sözü Bloğu Kodu"
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Expose Frequency Interval?"
 msgstr "Sıklık Aralığı Belirtilsin"
+
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Allow Edits to Recurring Donation Start Date?"
+msgstr "Yinelenen Bağış Başlangıç Tarihi Düzenlenebilsin"
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
