po: update po/uk_UA/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/uk_UA/mailing.po
+++ b/po/uk_UA/mailing.po
@@ -5,11 +5,12 @@
 # Translators:
 # Sergiy <shemet.s@ua.fm>, 2015
 # Sergiy <shemet.s@ua.fm>, 2013,2015
+# The Explorer, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -1157,27 +1158,27 @@ msgstr "CiviCRM пошук пошти"
 
 #: ang/crmMailing/BlockApprove.html
 msgid "Unreviewed"
-msgstr ""
+msgstr "Неперевірено"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
-msgstr ""
+msgstr "Зберегти Як"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
-msgstr ""
+msgstr "Адреса електронної пошти"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
-msgstr ""
+msgstr "Відписатися від групи"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
-msgstr ""
+msgstr "Немає контенту для перегляду"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr ""
+msgstr "Переглянути як HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
@@ -1185,15 +1186,15 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr ""
+msgstr "Відправити тестовий електронний лист до:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr ""
+msgstr "Тестовий електронний лист"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
-msgstr ""
+msgstr "Наслідати тестове повідомлення до %1"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
@@ -1201,11 +1202,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Надіслати тестовий електронний лист до групи:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Надіслати тестове повідомлення до групи"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
@@ -2511,11 +2512,15 @@ msgstr "Ви впевнені, що хочете повторно підписа
 
 #: templates/CRM/Mailing/Page/Tab.tpl
 msgid "Opens/ Clicks"
-msgstr "Відкриває/Натискає"
+msgstr "Відкриттів/Кліків"
+
+#: CRM/Mailing/BAO/Mailing.php
+msgid "Document Body"
+msgstr ""
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
-msgstr ""
+msgstr "Кампанія %1 %2"
 
 #: CRM/Mailing/DAO/BouncePattern.php
 msgid "Bounce Pattern ID"
@@ -2573,11 +2578,11 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Reply.php
 msgid "Reply ID"
-msgstr ""
+msgstr "Ідентифікатор відповіді"
 
 #: CRM/Mailing/Event/DAO/Reply.php
 msgid "Reply Timestamp"
-msgstr ""
+msgstr "Час відправки відповіді"
 
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Trackable URL Open ID"
@@ -2587,32 +2592,44 @@ msgstr ""
 msgid "Trackable Url"
 msgstr ""
 
+#: CRM/Mailing/Form/Component.php
+msgid "Please provide either HTML or TEXT format for the Body."
+msgstr ""
+
+#: CRM/Mailing/Selector/Browse.php
+msgid "Public View"
+msgstr ""
+
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
-msgstr ""
+msgstr "Усього відслідкованих відкриттів"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click-Throughs"
-msgstr ""
+msgstr "Переходи за посиланнями"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click-Throughs"
-msgstr ""
+msgstr "Відслідковувати переходи за посиланнями"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
 "The mailing must allow recipients to (a) unsubscribe from the mailing-list "
 "or (b) completely opt-out from all mailings. Please insert an unsubscribe or"
 " opt-out token."
-msgstr ""
+msgstr "Розсилка повинна дозволяти отримувачам обрати, (а) відписатися від списку розсилки або ж (б) повністю відмовитися від усіх розсилок. Будь ласка, введіть жетон відписки або вилучення."
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for '%1'"
-msgstr ""
+msgstr "Звіти за '%1'"
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "NOTE: When this feature is enabled, all links in the message body (including"
 " mailtos) will be automatically re-written to route through your CiviCRM "
 "website prior to redirecting to the target page."
+msgstr "УВАГА: Коли ця функція увімкнена, усі посилання усередині повідомлення (разом з адресами електронних пошт mailto) будуть переписані так, щоб проходити через ваш CiviCRM-сервер перед переходом до цільової сторінки."
+
+#: templates/CRM/Mailing/Page/Report.tpl
+msgid "Public url"
 msgstr ""
