po: update po/zh_CN/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_CN/countries.po
+++ b/po/zh_CN/countries.po
@@ -29,9 +29,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-25 14:42+0000\n"
-"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1066,3 +1066,23 @@ msgstr "圣巴泰勒米"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "圣马丁岛(法属部分)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr ""
