po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-06 12:52+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5028,7 +5028,7 @@ msgstr "Nom de l'extensió (clau)"
 msgid ""
 "There are no extensions to display. Please click \"Refresh\" to update "
 "information about available extensions."
-msgstr "No hi ha extensions per a mostrar, feu clic en \"Refrescar\" per a actualitzar informació sobre extensions disponibles.  "
+msgstr "No hi ha extensions per a mostrar, feu clic en \"Actualitza\" per a actualitzar informació sobre extensions disponibles.  "
 
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
 msgid "Outdated"
@@ -5044,7 +5044,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Extensions/Refresh.tpl
 msgid "Refresh"
-msgstr ""
+msgstr "Actualitza"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid ""
@@ -5058,11 +5058,11 @@ msgstr "Afegir nova"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Refreshing..."
-msgstr "Refrescant..."
+msgstr "Actualitzant..."
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Refresh Error"
-msgstr "Error al refrescar "
+msgstr "Error a l'actualitzar "
 
 #: templates/CRM/Admin/Page/Job.tpl
 msgid ""
