po: update po/ca_ES/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/drupal-civicrm.po
+++ b/po/ca_ES/drupal-civicrm.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-10-03 14:19+0000\n"
+"PO-Revision-Date: 2016-10-06 13:16+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2713,7 +2713,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact has been created"
-msgstr ""
+msgstr "S'ha creat el contacte"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Created contact"
@@ -2733,7 +2733,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Viewed contact"
-msgstr ""
+msgstr "Contacte visualitzat"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact has been deleted"
@@ -2741,7 +2741,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Deleted contact"
-msgstr ""
+msgstr "Contacte eliminat"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been created"
